# ShortsMaker

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_BRIEF.md  README.md  STATUS.md  pyproject.toml
input/profiles/: sample_saju.json
renderer/: package-lock.json  package.json  tsconfig.json
renderer/scripts/: render-job.ts
renderer/src/: Root.tsx  ShortsComposition.tsx  types.ts
src/shortsmaker/: __init__.py  __main__.py  cli.py  config.py  hooks.py  job.py  languages.py  models.py  utils.py
src/shortsmaker/render/: __init__.py  remotion.py
src/shortsmaker/tts/: __init__.py  providers.py
tests/: test_cli.py
