[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shortsmaker"
version = "0.1.0"
description = "Starter workspace for building short-form video generation tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
shortsmaker = "shortsmaker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
